<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DetailActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_pict_anime"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:contentDescription="img Anime"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_anime_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_list"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_anime_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_genre"
                android:textSize="13sp"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:id="@+id/tv_anime_sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_sinopsis"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
