<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/photoProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/ava"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        app:layout_constraintStart_toStartOf="@id/photoProfile"
        app:layout_constraintEnd_toEndOf="@id/photoProfile"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_name"
        app:drawableStartCompat="@drawable/ic_email_primary_24dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:drawableStartCompat="@drawable/ic_place_primary_24dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>
